Completed GetMessage, retreives messages from input user or produces error message.

--- a/serverless.yml
+++ b/serverless.yml
@@ -54,9 +54,9 @@ resources:
       Properties:
         TableName: MessageBoard
         AttributeDefinitions:
-          - AttributeName: id
+          - AttributeName: username
             AttributeType: S
         KeySchema:
-          - AttributeName: id
+          - AttributeName: username
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
