--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@aws-sdk/client-dynamodb": "^3.656.0",
     "@aws-sdk/lib-dynamodb": "^3.656.0",
     "aws-sdk": "^2.1691.0",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
